--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
      `--write=datasum' (only for `DATASUM').
    --verify: confirm if the `DATASUM' and `CHECKSUM' keyword values agree
      with the specified HDU's content and/or data.
+   --copykeys: Copy several keyword records (in a given range) from one
+     FITS HDU/extension into another (possibly in another file).
+   --outhdu: The name/number of the output HDU (for `--copykeys').
+
+  Library:
+    GAL_BLANK_LONG: new macro for the `long' type blank value.
+    GAL_BLANK_ULONG: new macro for the `unsigned long' type blank value.
 
 ** Removed features
 
