Function to find outliers using flat cumulative frequency plot
A new outlier identification algorithm has been defined that uses a
sufficiently wide flat portion of the cumulative frequency plot. It is
described in detail within the book.

--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   Library:
     GAL_BLANK_LONG: new macro for the `long' type blank value.
     GAL_BLANK_ULONG: new macro for the `unsigned long' type blank value.
+    gal_statistics_outlier_cumulative: Uses flatness of the cumulative
+       distribution to find outliers.
 
 ** Removed features
 
