--checkconfig prints parsing of configuration files
With this option, its now possible to check/debug how options are parsed by
any Gnuastro program in the same order that they are parsed.

This idea for this option actually came up when I was checking how
`--minmapsize' is being parsed by the Fits program. I found that
`--minmapsize' is being ignored and that there is no check when its value
is zero (it is needed for allocating some datasets). To address the first,
its no longer in the list of hidden options for Fits and for the second, we
there is now a warning to inform the users of unexpected behavior.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  All programs:
+   --checkconfig: print the names and values given to options as they are
+     parsed on the command-line or in various configuration files (the
+     configuration file name is also printed). This can be very useful in
+     debugging (finding which configuration file is responsible for a given
+     option's value).
+
   Fits:
    - Add "title" to group FITS keywords with `--write=/,"title name". This
      "title" is composed of two keyword records: a blank one, followed by
