NoiseChisel: good error message when quantile threshold not found
Until now, when no tiles could be used to find the quantile threshold,
NoiseChisel would crash with an error saying it can't allocate a zero-sized
array, not saying exactly why this was happening!

We had a very complete and descriptive error message *after* removing
outliers, but not before it. So unless the user ran NoiseChisel again with
`--checkqthresh' and inspected the extensions, they couldn't see if this
error occurred before the outlier rejection or after it.

With this commit, a function is defined to print the elaborate error
message while mentioning at which point the error happens. Its suggestions
are also increased if the error message happened after the outlier
rejection step (since there are two more parameters).

The particular crash of this bug was actually happening because
`gal_statistics_no_blank_sorted' was trying to copy a zero-sized array. So
with this commit, in such situations (when `size==0', it will just make a
blank array when `inplace==0' instead of attempting to copy the input.

Also, to implement this feature, the new `gal_blank_number' function was
defined (as a small wrapper around `gal_statistics_number') in the library.

This bug was reported by Raúl Infante Sainz.

This fixes bug #55491.

--- a/NEWS
+++ b/NEWS
@@ -38,6 +38,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   Library:
     GAL_BLANK_LONG: new macro for the `long' type blank value.
     GAL_BLANK_ULONG: new macro for the `unsigned long' type blank value.
+    gal_blank_number: Return the number of blank elements in a dataset.
     gal_statistics_outlier_cumulative: Uses flatness of the cumulative
        distribution to find outliers.
 
@@ -57,6 +58,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #55333: Fits program crash when --write or --update have no value.
   bug #55439: Arithmetic segmentation fault when reusing dataset name.
   bug #55478: Memory mapping crashes when .gnuastro is not writable.
+  bug #55491: NoiseChisel crash when no tiles good for quantile thresholding.
 
 
 
