Arithmetic: new tofile- operator to write the top operand to a file
Until now, as the Arithmetic command got more and more complicated, there
it was relatively hard to check the progress and debug/understand
undexpected outputs.

With this commit, a new `tofile-AAA' operator is added to Arithmetic. It
can be placed anywhere in between the operands and operators to check the
top operand.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,12 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
      debugging (finding which configuration file is responsible for a given
      option's value).
 
+  Arithmetic:
+   - The new `tofile-' operator will save the top operand into a file
+     without changing the state of the operand stack (popping the top
+     element). This can greatly help in debugging/understanding an
+     Arithmetic command, especially as it gets longer, or more complicated.
+
   Fits:
    - Add "title" to group FITS keywords with `--write=/,"title name". This
      "title" is composed of two keyword records: a blank one, followed by
